# care-calendar

./: README.md
.github/workflows/: backend-infra.yaml  frontend-infra.yaml  infra-core.yaml
.obsidian/: workspace.json
Excalidraw/: Solidjs.md  architecture.md  infrastructure.md
booking/: README.md  compose.yaml
booking/backend/: README.md  backend-infra.sln  build.dockerfile  build.ps1  rebuild_local_container.ps1
booking/backend/api/: api.csproj  buildapi.dockerfile  buildapi.ps1  local.dockerfile
booking/backend/infra/: DatabaseComponent.cs  DbInfra.cs  MigrationComponent.cs  MigrationInfra.cs  NetworkInfra.cs  Program.cs  Pulumi.yaml  ServiceComponent.cs  ServiceInfra.cs  infra.csproj
booking/backend/update/: update.csproj
booking/frontend/: README.md  build.dockerfile  build.ps1  frontend-infra.sln  local.dockerfile
booking/frontend/infra/: Program.cs  (+3 more)
booking/rust/booking-warp-api/: .env  Cargo.toml
booking/rust/booking-warp-api/src/: filters.rs  main.rs  state.rs
booking/rust/booking-warp-api/src/handlers/: auth.rs  mod.rs  person.rs
booking/rust/booking-warp-api/src/models/: app_state.rs  auth.rs  auth_config.rs  claims.rs  mod.rs  person.rs
booking/rust/booking-warp-api/src/services/: auth.rs  encryptor.rs  mod.rs
docs/: Solidjs.md  Tracker.md  architecture.excalidraw.md  github.excalidraw.md  schema.excalidraw.md
docs/Kanban/: Tracker.md
docs/Notes/: REACT.md
infra-core/: booking-infra.sln  build.dockerfile  build.ps1
infra-core/infra/: .gitignore  Program.cs  Pulumi.yaml  infra-core.csproj  infra.csproj  pulumi.yaml
(+143 files in other folders)
