[package]
name = "booking-warp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.57.1"
aws-sdk-kms = "0.35.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3"
jsonwebtoken = "8.1.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["chrono", "uuid", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"
